[package]
name = "ros2_cmd_vel_publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
r2r = "0.9"                                        # Use the latest version
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
usls = { version = "0.0.20", default-features = false }
nokhwa = { version = "0.10.7", features = ["input-native", "output-threaded"] }
image = "0.25.6"
anyhow = "1.0.97"
ort = "2.0.0-rc.9"
rand = "0.9.0"

[profile.release]
lto = "fat"
codegen-units = 1
